@@ -4,9 +4,8 @@ apply from: "./libraries.gradle"
 
 allprojects {
     repositories {
-	mavenCentral()
-    	mavenLocal()
-
+        mavenCentral()
+        mavenLocal()
         mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
         mavenRepo name: "jboss-snapshots", url: "http://snapshots.jboss.org/maven2/"
     }
@@ -14,8 +13,8 @@ allprojects {
 
 buildscript {
     repositories {
-	mavenCentral()
-	    mavenLocal()
+        mavenCentral()
+        mavenLocal()
 
         mavenRepo name: 'jboss-nexus', url: "http://repository.jboss.org/nexus/content/groups/public/"
         mavenRepo name: "jboss-snapshots", url: "http://snapshots.jboss.org/maven2/"
@@ -26,10 +25,15 @@ buildscript {
 }
 
 ext.hibernateTargetVersion = '5.0.0-SNAPSHOT'
+ext.javaLanguageLevel = "1.6"
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.5'
+}
 
 idea {
     project {
-        languageLevel = '1.6'
+        languageLevel = javaLanguageLevel
         ipr {
             withXml { provider ->
                 provider.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = 'Git'
@@ -65,7 +69,13 @@ subprojects { subProject ->
         apply plugin: 'maven' // for install task as well as deploy dependencies
         apply plugin: 'uploadAuth'
         apply plugin: 'osgi'
+
         apply from: "../utilities.gradle"
+
+        apply plugin: 'findbugs'
+        apply plugin: 'checkstyle'
+        apply plugin: 'build-dashboard'
+        apply plugin: 'project-report'
 
         configurations {
             provided {
@@ -93,6 +103,7 @@ subprojects { subProject ->
         // appropriately inject the common dependencies into each sub-project
         dependencies {
             compile( libraries.logging )
+
             testCompile( libraries.junit )
             testCompile( libraries.byteman )
             testCompile( libraries.byteman_install )
@@ -104,8 +115,11 @@ subprojects { subProject ->
             testRuntime( libraries.jcl )
             testRuntime( libraries.javassist )
             testRuntime( libraries.h2 )
+
             jbossLoggingTool( libraries.logging_processor )
+
             hibernateJpaModelGenTool( libraries.jpa_modelgen )
+
             jaxb( libraries.jaxb ){
                 exclude group: "javax.xml.stream"
             }
@@ -117,12 +131,17 @@ subprojects { subProject ->
             deployerJars "org.apache.maven.wagon:wagon-http:1.0"
         }
 
+        // mac-specific stuff ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         ext.toolsJar = file("${System.getProperty('java.home')}/../lib/tools.jar")
         if ( ext.toolsJar.exists() ) {
             dependencies{
                 testCompile files( toolsJar )
             }
         }
+        // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+        targetCompatibility = rootProject.javaLanguageLevel
+        sourceCompatibility = rootProject.javaLanguageLevel
 
         task compile
         compile.dependsOn compileJava, compileTestJava
@@ -150,8 +169,8 @@ subprojects { subProject ->
                             "-processor", "org.jboss.logging.processor.apt.LoggingToolsProcessor",
                             "-s", "$sourceSets.main.generatedLoggingSrcDir.absolutePath",
                             "-AloggingVersion=3.0",
-                            "-source", "1.6",
-                            "-target", "1.6",
+                            "-source", rootProject.javaLanguageLevel,
+                            "-target", rootProject.javaLanguageLevel,
                             "-AtranslationFilesPath=${project.rootDir}/src/main/resources"
                     ]
             );
@@ -177,33 +196,33 @@ subprojects { subProject ->
         jar {
             Set<String> exportPackages = new HashSet<String>()
             Set<String> privatePackages = new HashSet<String>()
-            
+
             // TODO: Could more of this be pulled into utilities.gradle?
-            sourceSets.each { SourceSet sourceSet ->
-                        // skip certain source sets
-                        if ( ! ['test','matrix'].contains( sourceSet.name ) ) {
-                            sourceSet.java.each { javaFile ->
-                                // - org.hibernate.boot.registry.classloading.internal
-                                // until EntityManagerFactoryBuilderImpl no longer imports ClassLoaderServiceImpl
-                                // - .util for external module use (especially envers)
-                                final String[] temporaryExports = [
-                                    'org.hibernate.boot.registry.classloading.internal',
-                                    'org.hibernate.internal.util' ]
-                            
-                                final String packageName = determinePackageName( sourceSet.java, javaFile );
-                                if ( ! temporaryExports.contains( packageName )
-                                        && ( packageName.endsWith( ".internal" )
-                                        || packageName.contains( ".internal." )
-                                        || packageName.endsWith( ".test" )
-                                        || packageName.contains( ".test." ) ) ) {
-                                    privatePackages.add( packageName );
-                                }
-                                else {
-                                    exportPackages.add( packageName );
-                                }
-                            }
+            sourceSets.each { sourceSet ->
+                // skip certain source sets
+                if ( ! ['test','matrix'].contains( sourceSet.name ) ) {
+                    sourceSet.java.each { javaFile ->
+                        // - org.hibernate.boot.registry.classloading.internal
+                        // until EntityManagerFactoryBuilderImpl no longer imports ClassLoaderServiceImpl
+                        // - .util for external module use (especially envers)
+                        final String[] temporaryExports = [
+                            'org.hibernate.boot.registry.classloading.internal',
+                            'org.hibernate.internal.util' ]
+
+                        final String packageName = determinePackageName( sourceSet.java, javaFile );
+                        if ( ! temporaryExports.contains( packageName )
+                                && ( packageName.endsWith( ".internal" )
+                                || packageName.contains( ".internal." )
+                                || packageName.endsWith( ".test" )
+                                || packageName.contains( ".test." ) ) ) {
+                            privatePackages.add( packageName );
+                        }
+                        else {
+                            exportPackages.add( packageName );
                         }
                     }
+                }
+            }
 
             manifest = osgiManifest {
                 // GRADLE-1411: Even if we override Imports and Exports
@@ -211,11 +230,17 @@ subprojects { subProject ->
                 // need to be here (temporarily).
                 classesDir = sourceSets.main.output.classesDir
                 classpath = configurations.runtime
+
+                instruction 'Import-Package',
+                    // Temporarily support JTA 1.1 -- Karaf and other frameworks still
+                    // use it.  Without this, the plugin generates [1.2,2).
+                    'javax.transaction;version="[1.1,2)"',
+                    '*'
                 
                 instruction 'Export-Package', exportPackages.toArray(new String[0])
                 instruction 'Private-Package', privatePackages.toArray(new String[0])
-                instruction 'Bundle-Vendor', 'Hibernate.org'
                 
+                instruction 'Bundle-Vendor', 'Hibernate.org'
                 instruction 'Implementation-Url', 'http://hibernate.org'
                 instruction 'Implementation-Version', version
                 instruction 'Implementation-Vendor', 'Hibernate.org'
@@ -234,9 +259,9 @@ subprojects { subProject ->
             systemProperties['hibernate.test.validatefailureexpected'] = true
             systemProperties += System.properties.findAll { it.key.startsWith( "hibernate.") }
             maxHeapSize = "1024m"
+            // Not strictly needed but useful to attach a profiler:
+            jvmArgs '-XX:MaxPermSize=256m'
         }
-
-
 
         processTestResources.doLast( {
             copy {
@@ -250,9 +275,6 @@ subprojects { subProject ->
 
         assemble.doLast( { install } )
         uploadArchives.dependsOn install
-
-        targetCompatibility = "1.6"
-        sourceCompatibility = "1.6"
 
         idea {
             module {
@@ -286,6 +308,40 @@ subprojects { subProject ->
                 plusConfigurations.add( configurations.provided )
             }
         }
+
+    	// eclipseClasspath will not add sources to classpath unless the dirs actually exist.
+	    eclipseClasspath.dependsOn("generateSources")
+
+        // specialized API/SPI checkstyle tasks ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        task checkstylePublicSources(type: Checkstyle) {
+            checkstyleClasspath = checkstyleMain.checkstyleClasspath
+            classpath = checkstyleMain.classpath
+            configFile = rootProject.file( 'shared/config/checkstyle/public_checks.xml' )
+            source subProject.sourceSets.main.originalJavaSrcDirs
+            exclude '**/internal/**'
+            exclude '**/internal/*'
+            ignoreFailures = false
+            showViolations = true
+            reports {
+                xml {
+                    destination "$buildDir/reports/checkstyle/public.xml"
+                }
+            }
+        }
+        // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+        // Report configs ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+        checkstyle {
+            configFile = rootProject.file( 'shared/config/checkstyle/checkstyle.xml' )
+            showViolations = false
+            ignoreFailures = true
+        }
+        findbugs {
+            ignoreFailures = true
+        }
+        buildDashboard.dependsOn check
+        // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 
         // elements used to customize the generated POM used during upload
         def pomConfig = {
@@ -351,14 +407,4 @@ subprojects { subProject ->
         uploadArchives.dependsOn sourcesJar
     }
 
-}
-
-// This is a task that generates the gradlew scripts, allowing users to run gradle without having gradle installed
-// on their system.
-// This task should be run by "build master" and the resulting output committed to source control.  Its outputs include:
-//  1) /gradlew which is the *NIX shell script for executing builds
-//  2) /gradlew.bat which is the windows bat script for for executing builds
-//  3) /wrapper which is a directory named by the "jarPath" config which contains other needed files.
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.5'
 }
